# nx-repo

./: .dockerignore  .eslintrc.json  .eslintrc.react.json  .flake8  .gitignore  .golangci.yaml  .hadolint.yaml  .npmrc  .pre-commit-config.yaml  .prettierignore  .snyk  .tool-versions  DEPENDENCIES.md  Makefile  README.md  buf.gen.caremanager.yaml  buf.gen.go.yaml  buf.gen.openapi.yaml  buf.gen.python.yaml  buf.gen.ts.yaml  buf.work.yaml  go.mod  go.sum  jest.config.ts  jest.preset.js  migrations.json  nx.json  openapitools.json  package-lock.json  package.json  pyproject.toml  sonar.go.properties  sonar.java.properties  sonar.python.properties  sonar.ts.properties  tsconfig.base.json
.github/: CODEOWNERS  auto_assign.yml  labeler.yml  pull_request_template.md
.release/: application_template.yaml  environment_variables.yaml
.storybook/: preview.tsx  tsconfig.json
docker/: Procfile  athena-listener-service-entrypoint.sh  athena-service-entrypoint.sh  atlantis.Dockerfile  audit-service-entrypoint.sh  caremanager-service-entrypoint.sh  clinicalkpi-service-entrypoint.sh  companion-api-entrypoint.sh  companion-api.Dockerfile  default-entrypoint.sh  go.Dockerfile  insurance-service-entrypoint.sh  logistics-service-entrypoint.sh  modality-service-entrypoint.sh  notifications-service-entrypoint.sh  onboarding-api-entrypoint.sh  onboarding-api.Dockerfile  opa.Dockerfile  partner-service-entrypoint.sh  patientaccounts-service-entrypoint.sh  patients-service-entrypoint.sh  pophealth-service-entrypoint.sh  python.Dockerfile  releasehub-java.Dockerfile  releasehub-tooling.Dockerfile  riskstratification-service-entrypoint.sh  shiftschedule-service-entrypoint.sh  tytocare-service-entrypoint.sh
events/: README.md
go/: README.md
infra/: README.md
opa/: README.md
proto/: README.md  buf.yaml
py/: README.md
py/lib/acuity_model/: pyproject.toml
py/lib/acuity_model/acuity_model/: README.md  __init__.py  base_model.py  utils.py  version_0.py  version_2.py
py/lib/acuity_model/tests/: test_version_0.py  test_version_2.py
py/lib/auth/: pyproject.toml
py/lib/auth/auth/: __init__.py  exceptions.py  grpc.py  validation.py
py/lib/auth/tests/: test_auth.py
py/lib/event_streaming/: README.md  pyproject.toml
py/lib/event_streaming/event_streaming/: __init__.py  client.py  config.py  producer.py
py/lib/event_streaming/examples/: bulk_producer_example.py  producer_example.py  threaded_example.py  utils.py
py/lib/event_streaming/schema_management/: api.py  register.py  utils.py  validate.py
py/lib/event_streaming/tests/: conftest.py  test_api.py  test_client.py  test_config.py  test_producer.py  test_register.py  test_utils.py  test_validate.py
py/lib/model_utils/: README.md  pyproject.toml
py/lib/model_utils/model_utils/: EXAMPLE.ipynb  base_ml_model.py  db_lookup.py  enums.py  errors.py  eval.py  file_utils.py  model_config.py  reader.py  risk_protocol_preproc.py  xgb_model.py
py/lib/model_utils/model_utils/training/: plotting.py
py/lib/model_utils/tests/: conftest.py  seed__protocol_names.csv  test_base_ml_model.py  test_config_reader.py  test_db_lookup.py  test_eval.py  test_file_utils.py  test_model_config.py  test_plotting.py  test_risk_protocol_preproc.py  test_xgb_model.py
py/lib/monitoring/: README.md  pyproject.toml
py/lib/monitoring/monitoring/: metrics.py
py/lib/normalized_protocol_names/: pyproject.toml
py/lib/normalized_protocol_names/normalized_protocol_names/: __init__.py  api.py
py/lib/normalized_protocol_names/tests/: test_api.py
py/lib/on_scene/: README.md  pyproject.toml
py/lib/on_scene/on_scene/: config.py  const.py  core.py  enums.py  errors.py  features.py  model.py  user_lookup.py
py/lib/on_scene/tests/: conftest.py  test_core.py  test_enums.py  test_features.py  test_model.py  test_user_lookup.py
py/lib/on_scene/training/v2.0/: data.sql  train_v2p0.py
py/lib/proto/: README.md  pyproject.toml
py/lib/telep/: pyproject.toml
py/lib/telep/telep/config/: README.md  enums.py  errors.py  telep_model_config.py
py/lib/telep/telep/models/: README.md  errors.py  telep_model.py
py/lib/telep/telep/preprocessing/: errors.py  text.py
py/lib/telep/telep/service/: README.md  clinical_overrides.py  core.py  errors.py
py/lib/telep/tests/: conftest.py  test_clinical_overrides.py  test_configs.py  test_core.py  test_no_op.py  test_telep_model.py  test_text_preproc.py
py/lib/telep/tests/fixtures/: clinical_override_notes.py
py/lib/telep/training/: features.sql  model_prepare.py  model_train.py  token_cols.json  train_telep_20230322.ipynb  train_telep_20230901.ipynb
py/projects/acuity_model_server/: README.md  pyproject.toml
py/projects/acuity_model_server/acuity_model_server/: __init__.py  server.py
py/projects/acuity_model_server/tests/: test_acuity_model_server.py
py/projects/on_scene_model_service/: README.md  pyproject.toml
py/projects/on_scene_model_service/on_scene_model_service/: __init__.py  server.py
py/projects/on_scene_model_service/tests/: conftest.py  test_server.py
py/projects/telep_model_server/: README.md  pyproject.toml
py/projects/telep_model_server/telep_model_server/: __init__.py  server.py
py/projects/telep_model_server/tests/: conftest.py  integration_test_gha.py  test_telep_server.py
py/tools/feature_store/: README.md  pyproject.toml
py/tools/feature_store/feature_store/: enums.py  errors.py  ingest.py  query.py
py/tools/feature_store/tests/: test_ingest.py  test_query.py
py/tools/grpc_proxy/: README.rst  pyproject.toml
py/tools/grpc_proxy/grpc_proxy/: __init__.py  server.py
py/tools/grpc_proxy/models/: grpc_requests.py
py/tools/grpc_proxy/tests/: test_grpc_proxy.py
py/tools/scripts/: pyproject.toml
py/tools/scripts/scripts/: refactor_protos.py
py/tools/scripts/tests/: test_refactor_protos.py
scripts/: build_container_and_wait.sh  download-buf.sh  download-env-secrets.sh  download-protoc.sh  gen-py-grpc-binaries.sh  run-grpc-proxy-server.sh  run-poetry-server.sh  run-poetry-tests.sh  sql-formatter.js  update-node-dep-owners  update-poetry-config-python-vers.sh  (+2 more)
(+5408 files in other folders)
