[tool.poetry]
name = "acuity_model"
version = "0.1.0"
description = ""
authors = ["Manu Sabherwal <manu.sabherwal@*company-data-covered*.com>"]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.11"
proto = {path = "../proto", develop = true}
monitoring = {path = "../../lib/monitoring", develop = true}
# requests is imported by dependencies. we force the latest version for security
requests = "^2.31.0"
# note: cryptography not directly needed, but must bump due to unsafe old vers
cryptography = "^41.0.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
