[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["Omar Ibanez <omar.ibanez@*company-data-covered*.com>"]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.11"
datadog = "^0.44.0"
python-decouple = "^3.6"
# note: certifi not directly needed, but must bump due to unsafe old vers
certifi = "^2022.12.7"
# requests is imported by dependencies. we force the latest version for security
requests = "^2.31.0"
# note: cryptography not directly needed, but must bump due to unsafe old vers
cryptography = "^41.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
