[tool.poetry]
name = "proto"
version = "0.1.0"
description = "Python library for dispatch's protos"
authors = ["Manu Sabherwal <manu.sabherwal@*company-data-covered*.com>"]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.11"
# NOTE: grpcio version should match root Makefile:GRPC_REPO_VERS
grpcio = "1.51.1"
protobuf = "3.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
