[tool.poetry]
name = "telep"
version = "0.1.0"
description = ""
authors = ["Manu Sabherwal <manu.sabherwal@*company-data-covered*.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# NOTE: need to use "~" instead of "^" for py, as scipy gets mad if not constrained to <3.12
python = ">=3.10.12 <3.11"
# must add scipy prior to xgboost, or will fail on compilation error
scipy = "^1.9.1"
xgboost = {extras = ["pandas", "scikit-learn"], version = "^1.7.2"}
# explicitly set scikit learn
scikit-learn = "1.2.1"
boto3 = "^1.26.42"
moto = {extras = ["s3"], version = "^4.0.13"}
python-decouple = "^3.7"
statsig = "^0.16.8"
proto = {path = "../proto", develop = true}
monitoring = {path = "../monitoring", develop = true}
normalized_protocol_names = {path = "../normalized_protocol_names", develop = true}
model_utils = {path = "../model_utils", develop = true}
pydantic = "^1.10.9"
# requests is imported by dependencies. we force the latest version for security
requests = "^2.31.0"
# note: cryptography not directly needed, but must bump due to unsafe old vers
cryptography = "^41.0.2"
spacy = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipdb = "^0.13.11"
notebook = "^6.5.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl"
