[tool.poetry]
name = "feature_store"
version = "0.1.0"
description = ""
authors = ["Omar Ibañez <omar.ibanez@*company-data-covered*.com>"]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.11"
pandas = "^1.5.0"
pytest = "^7.1.3"
sagemaker = "^2.150.0"
boto3 = "^1.24.87"
tenacity = "^8.2.2"
python-json-logger = "^2.0.4"
pyyaml = ">=6.0,<7.0" # mandatory since cython 3.0.0 broke prior versions (upperbound arbitrary)
beartype = "^0.15.0"
# requests is imported by dependencies. we force the latest version for security
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
