[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "helper scripts written in python. NOTE: poetry env here is only used for testing, the root poetry env should be responsible for calling these scripts"
authors = ["Manu Sabherwal <manu.sabherwal@*company-data-covered*.com>"]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.11"

[tool.poetry.dev-dependencies]
click = "^8.1.3"
pytest = "^7.1.2"
ipython = "^8.4.0"
# requests is imported by dependencies. we force the latest version for security
requests = "^2.31.0"
# note: cryptography not directly needed, but must bump due to unsafe old vers
cryptography = "^41.0.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
